# unitree_go2_nav_foxy

./: .gitignore  .gitmodules  README.md
go2_description/: CMakeLists.txt  README.md  package.xml
go2_description/config/: go2.rviz
go2_description/launch/: load_go2.launch.py  simulate_go2.launch.xml  world_go2.launch.xml
go2_description/urdf/: go2_description.urdf
go2_description/xacro/: robot.xacro
unitree_go2_nav/: CMakeLists.txt  package.xml
unitree_go2_nav/config/: mapping.rviz  nav2_params.yaml
unitree_go2_nav/launch/: demo.py  mapping.launch.py  navigation.launch.py
unitree_go2_nav/src/: navToPose.cpp  odomTf.cpp
unitree_go2_nav_interfaces/: CMakeLists.txt  package.xml
unitree_go2_nav_interfaces/msg/: NavToPose.msg
